Rather than setting a fixed width for the packages page Repository column, set the text so it doesn't wrap, and also set this for the package column

--- a/resources/assets/less/website/packages.less
+++ b/resources/assets/less/website/packages.less
@@ -63,8 +63,10 @@ body.packages {
         }
 
         &.packages-table {
+            .pcks-col { white-space: nowrap; }
+
             .repo-col {
-                width: 130px;
+                white-space: nowrap;
                 @media (max-width: 600px) { display: none; }
             }
 
